# lbry_batch_uploader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini  uploader.py
.github/workflows/: pre-commit.yaml  pypi-publish.yml  tests.yml  workflow.yml
lbry-batch-uploader/: uploader.py  utils.py
notebooks/: lbrynet_api_usage.ipynb  speech_api_usage.ipynb
src/lbry-batch-uploader/: uploader.py
src/lbry_batch_uploader/: __main__.py  parser.py  upload.py  uploader.py  utils.py
tests/: conftest.py  test_main.py  test_parser.py  test_uploader.py  test_utils.py
