[metadata]
name = lbry-batch-uploader
version = 0.1.0
author = thk-cheng
author_email = kenneth.cheng.tsun.him@gmail.com
description = A convenient batch uploader for LBRY Desktop written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thk-cheng/lbry-batch-uploader
project_urls =
    Bug Tracker = https://github.com/thk-cheng/lbry-batch-uploader/issues

[options]
packages = find:
python_requires = >=3.6
