[metadata]
name = lbry-batch-uploader-thk-cheng
version = 0.1.0
author = thk-cheng
author_email = kenneth.cheng.tsun.him@gmail.com
description = A convenient batch uploader for LBRY Desktop written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thk-cheng/lbry-batch-uploader
project_urls =
    Bug Tracker = https://github.com/thk-cheng/lbry-batch-uploader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
