[metadata]
name = lbry_batch_uploader
version = 1.0.2
author = thk-cheng
author_email = kenneth.cheng.tsun.him@gmail.com
description = A convenient batch uploader for LBRY Desktop written in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/thk-cheng/lbry_batch_uploader
project_urls =
    Bug Tracker = https://github.com/thk-cheng/lbry_batch_uploader/issues
platforms = linux, osx, unix
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages =
    lbry_batch_uploader
python_requires = >=3.8
install_requires =
    requests>=2
zip_safe = no

[options.extras_require]
testing =
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
    pre-commit>=2.19.0
    pytest>=7.0.0
    pytest-cov>=3.0.0
    tox>=3.25.0
    types-requests>=2.27.0

[options.package_data]
lbry_batch_uploader = py.typed

[flake8]
max-line-length = 160
